# Trench-Tools

./: .env.advanced  .env.example  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  EXECUTION_PROVIDER_PLAN.md  README.md  SECURITY.md  engine-client.js  keypair.js  launch.example.yml  package-lock.json  package.json  restart.sh  rpc.js  start-bot.ps1  start.ps1  start.sh  stop.sh  trench-tools-start.ps1  trench-tools-start.sh  trench-tools-stop.ps1  trench-tools-stop.sh  ui-server.js
.github/workflows/: extension-latest-release.yml  launchdeck-package.yml
config/: app-config.js
core/: README.md
docs/: ARCHITECTURE.md  CONFIG.md  ENV_REFERENCE.md  EXECUTION_DOS_AND_DONTS.md  EXECUTION_PROVIDER_PLAN.md  EXTENSION.md  FOLLOW_DAEMON.md  FRONTEND_REGRESSION_CHECKLIST.md  LAUNCHPADS.md  PRODUCTION_AUDIT.md  PROVIDERS.md  QUICKSTART.md  REPORTING.md  ROUTE_SOURCE_POLICY.md  STRATEGIES.md  SUPPORTED_POOLS.md  TROUBLESHOOTING.md  USAGE.md  VPS_SETUP.md
docs/internal/: EXECUTION_DOS_AND_DONTS.md  ROUTE_SOURCE_POLICY.md
docs/launchdeck/: FOLLOW_DAEMON.md  LAUNCHPADS.md  METADATA_AND_VANITY.md  REPORTING.md  STRATEGIES.md  USAGE.md
extension/trench-tools/: AXIOM_DATA_REFERENCE.md  README.md  manifest.json  package-lock.json  package.json
extension/trench-tools/launchdeck/: app.js  auto-sell-feature.js  extension-bootstrap.js  images-feature.js  index.html  layout.js  render-utils.js  reports-feature.js  request-utils.js  shared-constants.js  sniper-feature.js  styles.css
extension/trench-tools/launchdeck/app/: fee-routing.js  form-domain.js  image-crop-domain.js  image-metadata-domain.js  live-sync.js  local-binders.js  quote-preview-domain.js  reports-history.js  reports-presenters.js  runtime-actions.js  settings-domain.js  split-editors-domain.js  wallet-runtime-domain.js
extension/trench-tools/scripts/: check-launchdeck-package.mjs  check-manifest.mjs  package-launchdeck-shell.mjs
extension/trench-tools/src/: launchdeck-extension-bootstrap.js
extension/trench-tools/src/background/: active-mints.js  balance-demand.js  balances-store.js  diagnostics-store.js  events-client.js  execution-client.js  index.js  trade-readiness.js
extension/trench-tools/src/content/: index.js  launchdeck-shell.js  runtime.js
extension/trench-tools/src/offscreen/: audio.html  audio.js
extension/trench-tools/src/options/: index.html  index.js  styles.css
extension/trench-tools/src/panel/: index.html  index.js  styles.css
extension/trench-tools/src/popup/: index.html  index.js
extension/trench-tools/src/shared/: appearance.js  background-rpc.js  constants.js  host-client.js  site-features.js  (+1 more)
extension/trench-tools/tests/: layout-invariants.mjs
launchpads/: registry.js
launchpads/bagsapp/: index.js
launchpads/bonk/: index.js
launchpads/pump/: index.js
providers/: astralane.js  bloxroute.js  helius.js  hellomoon.js  jito.js  provider-adapters.js  registry.js
rust/execution-engine/: Cargo.toml  README.md
rust/execution-engine/src/: alt_diagnostics.rs  auth.rs  bags_execution_support.rs  batch_store.rs  bonk_execution_support.rs  bonk_native.rs  canonical_config.rs  endpoint_profile.rs  events_stream.rs  executor.rs  extension_api.rs  launchdeck_bridge.rs  launchdeck_warm.rs  lib.rs  main.rs  meteora_native.rs  mint_warm_cache.rs  paths.rs  persistent_config.rs  provider_tip.rs  providers.rs  pump_native.rs  raydium_amm_v4_native.rs  raydium_cpmm_native.rs  raydium_launchlab_native.rs  rewards.rs  rollout.rs  route_index.rs  route_metrics.rs  route_provenance.rs  rpc_client.rs  sell_target_sizing.rs  shared_config.rs  stable_native.rs  token_distribution.rs  trade_dispatch.rs  trade_ledger.rs  trade_planner.rs  trade_runtime.rs  transport.rs  (+8 more)
rust/execution-engine/tests/: route_source_policy.rs
rust/launchdeck-engine/: Cargo.toml
rust/launchdeck-engine/src/: bags_native.rs  balance_stream.rs  bonk_native.rs  compiled_transaction_signers.rs  config.rs  crypto.rs  execution_engine_bridge.rs  follow.rs  fs_utils.rs  image_library.rs  launchpad_dispatch.rs  launchpad_runtime.rs  launchpad_warm.rs  launchpads.rs  lib.rs  main.rs  observability.rs  paths.rs  provider_tip.rs  providers.rs  pump_native.rs  report.rs  reports_browser.rs  rpc.rs  runtime.rs  strategies.rs  transport.rs  ui_bridge.rs  ui_config.rs  vamp.rs  vanity_pool.rs  wallet.rs  warm_manager.rs  wrapper_compile.rs
rust/launchdeck-engine/src/follow/: client.rs  contract.rs  controlplane.rs  mod.rs  store.rs
rust/launchdeck-engine/tests/: route_source_policy.rs
rust/shared-auth/: Cargo.toml
rust/shared-auth/src/: lib.rs
rust/shared-execution-routing/: Cargo.toml
rust/shared-execution-routing/src/: alt_manifest.rs  endpoint_profile.rs  execution.rs  lib.rs  provider_tip.rs  providers.rs  transport.rs
rust/shared-extension-runtime/: Cargo.toml
rust/shared-extension-runtime/src/: balance_stream.rs  catalog.rs  crypto.rs  follow_contract.rs  lib.rs  resource_mode.rs  wallet.rs  warm_manager.rs
rust/shared-fee-market/: Cargo.toml
rust/shared-fee-market/src/: lib.rs  runtime.rs
rust/shared-raydium-launchlab/: Cargo.toml
rust/shared-raydium-launchlab/src/: lib.rs
rust/shared-transaction-submit/: Cargo.toml
rust/shared-transaction-submit/src/: compiled_transaction_signers.rs  lib.rs  observability.rs  rpc.rs  transport.rs
scripts/: bags-launchpad.js  bonk-launchpad.js  engine-benchmark.js  execution-engine-runtime-control.js  launchdeck-runtime-control.js  package-extension-zip.js  precommit-launchdeck-package.js  runtime-control.js  runtime-diagnostics.js  sync-version.js  tail-log.ps1  vps-bootstrap.sh
scripts/browser-matrix/: cases.js  run-fast.js  run.js
strategies/: registry.js
ui/: app.js  auto-sell-feature.js  images-feature.js  index.html  reports-feature.js  sniper-feature.js  styles.css
ui/launchdeck/: app.js  boot.js  extension-bootstrap.js  index.html  layout.js  sniper-feature.js  styles.css
ui/launchdeck/app/: form-domain.js  image-metadata-domain.js  local-binders.js  reports-history.js  runtime-actions.js  settings-domain.js  wallet-runtime-domain.js
(+2 files in other folders)
