[package]
name = "launchdeck-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "sync"] }
thiserror = "2"
bs58 = "0.5"
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
solana-sdk = "4.0.1"
borsh = "1.6.1"
spl-associated-token-account = "8.0.0"
bincode = "1"
base64 = "0.22.1"
solana-system-interface = { version = "3.1.0", features = ["bincode"] }
solana-address-lookup-table-interface = { version = "3.0.1", features = ["bincode", "bytemuck"] }
clap = { version = "4.6.0", features = ["derive"] }
serde_yaml = "0.9.34"
