[package]
name = "launchdeck-engine"
version = "0.1.0"
edition = "2024"

[features]
shared-transaction-submit-internal = []

[dependencies]
# Shared deps are pinned in the workspace Cargo.toml so both this crate
# and `execution-engine` compile against the same versions.
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# launchdeck-engine needs a wider tokio feature surface than the
# workspace default (signal + process + io-util for the follow daemon
# binary); `features = [...]` is additive when combined with
# `workspace = true`.
tokio = { workspace = true, features = ["signal", "process", "io-util"] }
bs58 = { workspace = true }
uuid = { workspace = true }
dotenvy = { workspace = true }
# reqwest needs `multipart` on this side for a few launchpad helpers.
reqwest = { workspace = true, features = ["multipart"] }
solana-sdk = { workspace = true }
spl-associated-token-account = { workspace = true }
bincode = { workspace = true }
base64 = { workspace = true }
solana-system-interface = { workspace = true }
spl-token = { workspace = true }
futures-util = { workspace = true }
shared-auth = { path = "../shared-auth" }
shared-extension-runtime = { path = "../shared-extension-runtime" }
shared-fee-market = { path = "../shared-fee-market" }
shared-execution-routing = { path = "../shared-execution-routing" }
shared-transaction-submit = { path = "../shared-transaction-submit" }

# Crate-specific deps.
thiserror = "2"
borsh = "1.6.1"
solana-address-lookup-table-interface = { version = "3.0.1", features = ["bincode", "bytemuck"] }
clap = { version = "4.6.0", features = ["derive"] }
serde_yaml = "0.9.34"
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
lunar-lander-quic-client = { git = "https://github.com/hellomoon-io/lunar-lander-quic-client-rs" }
rustls = { version = "0.23", features = ["ring"] }
num-bigint = "0.4.6"
num-traits = "0.2.19"
