[package]
name = "shared-extension-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = { workspace = true }
bs58 = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-sdk = { workspace = true }
spl-associated-token-account = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", features = ["ring"] }
