[package]
name = "shared-fee-market"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
shared-execution-routing = { path = "../shared-execution-routing" }
tokio = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
fs2 = { workspace = true }
